# ferrocrypt

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  fmt.sh  release.toml  stress_test.sh
.github/workflows/: mirror.yml  release.yml  rust.yml
experiments/armor/: Cargo.toml
experiments/armor/src/: armor.rs  error.rs  lib.rs  main.rs
experiments/ferrocrypt-desktop-dioxus/: CHANGELOG.md  Cargo.toml  README.md
experiments/ferrocrypt-desktop-dioxus/src/: main.rs
experiments/ferrocrypt-desktop-tauri/: package-lock.json  package.json
experiments/ferrocrypt-desktop-tauri/src/: App.tsx
experiments/ferrocrypt-desktop-tauri/src-tauri/: Cargo.toml
experiments/ferrocrypt-desktop-tauri/src-tauri/src/: lib.rs
ferrocrypt-cli/: Cargo.toml
ferrocrypt-cli/src/: cli.rs  main.rs
ferrocrypt-cli/tests/: cli_tests.rs
ferrocrypt-desktop/: Cargo.toml  build.rs
ferrocrypt-desktop/src/: main.rs  password_scorer.rs
ferrocrypt-desktop/ui/: app.slint
ferrocrypt-gui-dioxus/: README.md
ferrocrypt-gui-dioxus/src/: main.rs
ferrocrypt-gui-slint/: Cargo.toml
ferrocrypt-gui-slint/src/: main.rs
ferrocrypt-gui-slint/ui/: app.slint
ferrocrypt-gui-tauri/src/: App.tsx
ferrocrypt-gui-tauri/src-tauri/src/: lib.rs
ferrocrypt-lib/: Cargo.toml  FORMAT-v1.md  FORMAT.md  README.md  STRUCTURE.md  release.toml
ferrocrypt-lib/fuzz/: Cargo.toml  README.md
ferrocrypt-lib/fuzz/fuzz_targets/: fuzz_archive_path.rs  fuzz_detect_mode.rs  fuzz_header_prefix.rs  fuzz_hybrid_decrypt.rs  fuzz_hybrid_encrypt.rs  fuzz_kdf_params.rs  fuzz_key_file_header.rs  fuzz_private_key_header.rs  fuzz_recipient_decode.rs  fuzz_replication_decode.rs  fuzz_symmetric_decrypt.rs  fuzz_symmetric_encrypt.rs  fuzz_tlv.rs
ferrocrypt-lib/src/: api.rs  archiver.rs  atomic_output.rs  common.rs  container.rs  encrypted_file.rs  error.rs  format.rs  fuzz_exports.rs  hybrid.rs  lib.rs  private_key.rs  protocol.rs  public_key.rs  reed_solomon.rs  replication.rs  symmetric.rs
ferrocrypt-lib/src/archive/: decode.rs  encode.rs  limits.rs  mod.rs  path.rs  platform.rs
ferrocrypt-lib/src/crypto/: aead.rs  hkdf.rs  kdf.rs  keys.rs  mac.rs  mod.rs  stream.rs  tlv.rs
ferrocrypt-lib/src/fs/: atomic.rs  mod.rs  paths.rs
ferrocrypt-lib/src/key/: files.rs  mod.rs  private.rs  public.rs
ferrocrypt-lib/src/recipient/: entry.rs  mod.rs  name.rs  policy.rs
ferrocrypt-lib/src/recipient/native/: argon2id.rs  mod.rs  x25519.rs
ferrocrypt-lib/src/recipients/: argon2id.rs  mod.rs  x25519.rs
ferrocrypt-lib/tests/: api_tests.rs  compatibility_tests.rs  fixture_stability.rs  integration_tests.rs
ferrocrypt-lib/tests/common/: mod.rs
ferrocrypt-lib/tests/fixtures/: README.md
ferrocrypt-lib/tests/fixtures/encrypted/: small_dir.passphrase.fcr  small_dir.recipient.fcr  small_file.passphrase.fcr  small_file.recipient.fcr
ferrocrypt-lib/tests/fixtures/keys/: private.key  public.key
ferrocrypt-lib/tests/fixtures/source/: small_file.txt
ferrocrypt-lib/tests/fixtures/source/small_dir/: alpha.txt  beta.txt
ferrocrypt-lib/tests/fixtures/source/small_dir/nested/: gamma.txt
ferrocrypt-lib/tests/fixtures/v3/hybrid/: data.fcr  fingerprint.txt  hello.fcr  hello.txt  private.key  public.key  testdir.fcr
ferrocrypt-lib/tests/fixtures/v3/symmetric/: data.fcr  hello.fcr  testdir.fcr
ferrocrypt-lib/tests/fixtures/v4/hybrid/: data.fcr  fingerprint.txt  hello.fcr  hello.txt  private.key  public.key  testdir.fcr
ferrocrypt-lib/testvectors/suite/: README.md
ferrocrypt-lib/testvectors/wire/: README.md
supply-chain/: README.md  audits.toml  config.toml
