[package]
name = "ferrocrypt-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
slint = "1.15"
ferrocrypt = { path = "../ferrocrypt-lib" }
rfd = "0.17"
regex-lite = "0.1"
lazy_static = "1"

[build-dependencies]
slint-build = "1.15"

[package.metadata.bundle]
name = "FerroCrypt"
identifier = "com.ferrocrypt"
icon = ["assets/app_icon.png"]
resources = ["assets"]
category = "Developer Tool"
short_description = "FerroCrypt desktop app"

# macOS-specific
osx_minimum_system_version = "12.0"
