[package]
name = "ferrocrypt"
version = "0.2.5"
edition = "2021"

description = "Core FerroCrypt library: symmetric (XChaCha20-Poly1305 + Argon2id) and hybrid (X25519 + XChaCha20-Poly1305) encryption utilities."
authors = ["Alexander Alexandrov"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/alexylon/ferrocrypt"
homepage = "https://github.com/alexylon/ferrocrypt"
documentation = "https://docs.rs/ferrocrypt"
keywords = ["cryptography", "encryption", "chacha20poly1305", "argon2", "X25519"]
categories = ["cryptography"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_box = { version = "0.9", features = ["chacha20"] }
zeroize = "1"
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2"
tar = "0.4"
chacha20poly1305 = { version = "0.10", features = ["std", "stream"] }
rust-argon2 = "3"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
constant_time_eq = "0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
ctor = "0.8"
tempfile = "3"
tar = "0.4"
