[package]
name = "ferrocrypt"
version = "0.2.5"
edition = "2021"
rust-version = "1.87"

description = "Core FerroCrypt library: symmetric (XChaCha20-Poly1305 + Argon2id) and hybrid (X25519 + XChaCha20-Poly1305) encryption utilities."
authors = ["Alexander Alexandrov"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/alexylon/ferrocrypt"
homepage = "https://github.com/alexylon/ferrocrypt"
documentation = "https://docs.rs/ferrocrypt"
keywords = ["cryptography", "encryption", "chacha20poly1305", "argon2", "X25519"]
categories = ["cryptography"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fast-kdf = []

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.11"
zeroize = "1"
secrecy = "0.10"
thiserror = "2"
tar = "0.4"
chacha20poly1305 = { version = "0.10", features = ["std", "stream"] }
argon2 = { version = "0.5", features = ["std"] }
sha3 = "0.11"
hmac = "0.13"
hkdf = "0.13"
constant_time_eq = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
ferrocrypt = { path = ".", features = ["fast-kdf"] }
ctor = "0.8"
tempfile = "3"
tar = "0.4"
