[package]
name = "ferrocrypt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.ferrocrypt]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz_symmetric_decrypt"
path = "fuzz_targets/fuzz_symmetric_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_hybrid_decrypt"
path = "fuzz_targets/fuzz_hybrid_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_symmetric_encrypt"
path = "fuzz_targets/fuzz_symmetric_encrypt.rs"
doc = false

[[bin]]
name = "fuzz_hybrid_encrypt"
path = "fuzz_targets/fuzz_hybrid_encrypt.rs"
doc = false
